# Blockchain_AI_tutor

./: ImageAnalyzer.py  README.md  api.txt  blockchain_text.txt  requirements.txt
blockchain_tutor/: README.md  pyproject.toml
blockchain_tutor/src/blockchain_tutor/: crew.py  main.py  streamlit_app.py
blockchain_tutor/src/blockchain_tutor/config/: agents.yaml  tasks.yaml
blockchain_tutor/src/blockchain_tutor/db/: chroma.sqlite3
blockchain_tutor/src/blockchain_tutor/output/: code_query_results.json  extracted_data.json  image_analysis_results.json  knowledge_retrieval_results.json
blockchain_tutor/src/blockchain_tutor/tools/: custom_tool.py
chroma_db/322aa2e7-e678-4f38-8d4a-a5e890518400/: index_metadata.pickle
db/: chroma.sqlite3
output/: extracted_data.json  knowledge_retrieval_results.json  text_summarization_results.json
tutor/: pyvenv.cfg
